# quantframe

./: .env.template  .gitignore  LICENSE  README.md  check_page.py  create_project_structure.py  main.py  pyproject.toml  requirements.txt  run_main_scraper.py  run_scraper.py  run_tests.py  setup.py
assets/: README.md
config/: api_config.json  api_config.yaml  config.yaml  data_sources.yaml  ict_backtest_config.json
config/strategies/: grid_config.yaml  grid_trading.yaml  mean_reversion.yaml  mean_reversion_config.yaml  momentum.yaml  momentum_config.yaml
docs/: api_reference.md  ict_strategy.md
examples/: api_config_example.py  arima_regression_example.py  crypto_advanced_analysis.py  crypto_detailed_analysis.py  crypto_example.py  market_analysis_example.py  mean_reversion_example.py  mean_reversion_optimization.py  rolling_regression_btc.py
quantframe/: controller.py
quantframe/analysis/: __init__.py  market_analysis.py
quantframe/analytics/: __init__.py  performance.py
quantframe/backtesting/: engine.py
quantframe/config/: base_config.py  ict_config.py
quantframe/data/: base.py  test_data.py
quantframe/models/: __init__.py  position.py
quantframe/scrapers/: coinglass.py  coinglass_main.py
quantframe/strategy/: __init__.py  arima_regression_strategy.py  base.py  config_manager.py  grid.py  grid_trading.py  ict_strategy.py  mean_reversion.py  momentum.py  momentum_strategy.py  (+1 more)
results/: backtest_results_20250113_022203.json  backtest_results_20250113_235839.json  backtest_results_20250114_001103.json  backtest_results_20250114_010052.json
scripts/: backtest_ict.py  validate_api_keys.py
tests/: test_coinglass_scraper.py  test_controller.py  test_market_analysis.py  test_momentum_strategy.py
(+19 files in other folders)
